# RepRapFirmware

./: .absdata  .cproject  .gitattributes  .gitignore  .gitignore.BACKUP.5284.gitignore  .gitignore.REMOTE.5284.gitignore  .gitmodules  .project  .~lock.acceleration-aprx-simulation.ods#  AddingNewKinematics.md  BuildInstructions.md  BuildInstructions.txt  CMakeBuildInstructions.md  CMakeLists.txt  Changes in dc42 fork.txt  Configuration.h  DDA.cpp  DDA.h  DeltaParameters.cpp  DeltaParameters.h  Dictionay  DriveMovement.cpp  DriveMovement.h  Duet firmware for delta printers.odt  FileStore.cpp  FileStore.h  GCodeBuffer.cpp  GCodeBuffer.h  GCodes.cpp  GCodes.h  GCodes.ino  HTTP requests.md  Heat.cpp  Heat.h  Heat.ino  Isqrt.cpp  IsqrtThumb.s79  JSON responses.md  LICENCE  Line.cpp  (+46 more)
.github/ISSUE_TEMPLATE/: BugReport.yml  FeatureRequest.yml  config.yml
.github/workflows/: deploy.yml  issues.yml  prerelease.yml  release.yml
Data/: .~lock.duet-testing.doc#  .~lock.z-probe-calibration.ods#  calibration.scad  duet-testing.doc  gauge.g  gauge.stl  old-mendel-z-probe.scad  old-mendel-z-probe.stl  ormaxis.g  ormerod-xlr.scad  ormerod-xlr.stl  ormerod-xlr2.gcode  pronterface-interaction  testpiece.gcode  testpiece.stl  thumb-gauge.g  thumbwheel.stl  z-probe-calibration.ods
Developer-documentation/: Movement in RepRapFirmware.odt  New ESP8266 WiFi module code for Duet WiFi.odt  OpenAPI.yaml
Driver/: README.md  duet.inf  duetinf.cat
EdgeRelease/: Readme.md
Flash/: DueFlashStorage.cpp  DueFlashStorage.h  efc.cpp  flash_efc.h
Libraries/EMAC/: conf_eth.h  emac.h  ethernet_phy.c  ethernet_phy.h  ethernet_sam.c  ethernet_sam.h  ethernetif.c  ethernetif.h
Libraries/Fatfs/: 00readme.txt  conf_fatfs.h  fattime_rtc.c  ffconf.h
Libraries/Flash/: DueFlashStorage.cpp  DueFlashStorage.h  efc.h  flash_efc.cpp
Libraries/Lwip/: lwipopts.h
Libraries/MAX31855/: MAX31855.cpp  MAX31855.h
Libraries/MCP4461/: MCP4461.cpp  MCP4461.h
Libraries/SD_HSMCI/: SD_HSMCI.h
Libraries/SPI/: spi_master.c  spi_master.h  status_codes.h
Libraries/SamNonDuePin/: SamNonDuePin.cpp  SamNonDuePin.h
Libraries/Wire/: Wire.cpp
Maths/: BedLevelling-2-point.wxm  BedLevelling-3-point.wxm  BedLevelling-4-point.wxm  DeltaMaths.txt  ExtruderStepMaths.odt  closestPointOfApproach2d.wxmx  closestPointOfApproach3d.wxmx  delta.wxmx  trilateration-l3.wxmx  trilateration-triple.wxmx  trilateration.wxmx
Old-SD-image/www/: control.php  control.php~  logout.php  messages.txt  passwd.php~  print.php  settings.php  settings.php~
PccbEmbeddedFiles/sys/: config.g
Release/: GCodes.cpp.d  Heat.cpp.d  Move.cpp.d  Platform.cpp.d  README  RepRapFirmware.cpp.d  RepRapFirmware.elf  RepRapFirmware.map  Webserver.cpp.d  arduino.ar  flash.sh  makefile  sources.mk  subdir.mk
Release/Duet-0.6-0.8.5/: README
Release/Duet-WiFi/: README.md
Release/arduino/: CDC.cpp.d  HID.cpp.d  IPAddress.cpp.d  Print.cpp.d  Reset.cpp.d  RingBuffer.cpp.d  Stream.cpp.d  UARTClass.cpp.d  USARTClass.cpp.d  USBCore.cpp.d  WInterrupts.c.d  WMath.cpp.d  WString.cpp.d  cortex_handlers.c.d  cxxabi-compat.cpp.d  hooks.c.d  iar_calls_sam3.c.d  itoa.c.d  main.cpp.d  syscalls_sam3.c.d  variant.cpp.d  wiring.c.d  wiring_analog.c.d  wiring_digital.c.d  wiring_pulse.cpp.d  wiring_shift.c.d
ReleaseNotes/: 3.2.2.md  3.2.md  3.3.md  3.4.0beta6.md  3.4.0beta7.md
SD-image/: html404.htm  html404.htm~  index.htm  index.htm~  logout.php~  page2.htm  page2.htm~  passwd.htm  passwd.htm~  passwd.php~  print.php~  settings.php~
SD-image/gcodes/: bigcirc.g  circle.g  coathook.g  crocclip.g  crocclip.g~  duettest.g  ktst.g  ormaxis.g  setup10.g  snowman.g  square.g  square.g~  whistle.g
SD-image/gcodes-MiniKossel/: EscherLizard-Kossel-Duet.gcode  EscherLizard.gcode  HollowDodecahedron.gcode  octagon-test-delta.gcode  setheight.gcode
SD-image/gcodes-Ormerod/: circle.g  coathook.g  ormaxis.g  snowman.g  whistle.g
SD-image/macros/: E motors off
Scripts/: signdriver.bat
network/: ethernet_sam.c  ethernet_sam.h  fs.c  fs.h  fsdata.c  httpd-hacked.c  httpd-original.c  httpd.c  httpd.h  lwip_test.h  lwipopts.h  timer_mgt_sam.c  timer_mgt_sam.h
src/: .gitignore  AppNotifyIndices.h  BugList.txt  Configuration.h  DDA.cpp  DDA.h  DeltaParameters.cpp  DeltaProbe.cpp  DeltaProbe.h  DmacManager.cpp  DmacManager.h  DriveMovement.cpp  DriveMovement.h  ExternalDrivers.cpp  ExternalDrivers.h  Fan.cpp  Fan.h  FileStore.cpp  FileStore.h  GCodeBuffer.cpp  GCodeBuffer.h  GCodes.cpp  GCodes.h  Heat.cpp  Heat.h  IoPort.cpp  IoPort.h  IoPorts.cpp  IoPorts.h  Isqrt.cpp  Logger.cpp  Logger.h  MassStorage.cpp  MassStorage.h  Matrix.h  Memory usage.ods  MessageType.h  Move.cpp  Move.h  NamedEnum.h  (+61 more)
src/Networking/MQTT/MQTT_C/: CMakeLists.txt  build.zig
src/Networking/MQTT/MQTT_C/docs/: annotated.html  bio_publisher_8c-example.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  examples.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  group__api.html  menudata.js  mqtt_8c.html  mqtt_8c__incl.map  mqtt_8c__incl.md5  mqtt_8h.html  mqtt_8h__incl.map  mqtt_8h_source.html  mqtt__pal_8c.html  mqtt__pal_8c__incl.map  mqtt__pal_8h.html  mqtt__pal_8h__dep__incl.md5  openssl_publisher_8c-example.html  reconnect_subscriber_8c-example.html  structmqtt__client.html  structmqtt__fixed__header.html  structmqtt__message__queue.html  structmqtt__response.html  structmqtt__response__connack.html  structmqtt__response__pingresp.html  structmqtt__response__publish.html  structmqtt__response__pubrel.html  structmqtt__response__suback.html  structmqtt__response__unsuback.html
src/Networking/MQTT/MQTT_C/examples/: bearssl_publisher.c  bio_publisher_win.c  openssl_publisher_win.c  simple_publisher.c
src/Networking/MQTT/MQTT_C/examples/templates/: bearssl_sockets.h  bio_sockets.h  openssl_sockets.h  posix_sockets.h
src/Networking/MQTT/MQTT_C/include/: mqtt.h
toolchains/: arm-none-eabi.cmake
(+1699 files in other folders)
